--- a/css/header.css
+++ b/css/header.css
@@ -56,7 +56,7 @@ header .dropdown {
 }
 
 header .dropdown-content {
-    display: none;
+    display: none !important;
     position: absolute;
     background-color: white;
     min-width: 200px;
@@ -69,7 +69,7 @@ header .dropdown-content {
 }
 
 header .dropdown:hover .dropdown-content {
-    display: block;
+    display: block !important;
 }
 
 header .dropdown-content a {
